--- a/html/home.html
+++ b/html/home.html
@@ -17,4 +17,22 @@
                 </div>
             </div>
         </header>
+        <div class="main-content">
+            <div class="header-content">
+                    <div class="emp-detail-text">Employee Details
+                <div class="emp-count">10</div>
+            </div>
+            <a href="/EmployeePayrollApp_Day45/html/employee_payroll_form.html" class="add-button">
+                <img src="/EmployeePayrollApp_Day45/assets/add-24px.svg" alt="">Add User
+            </a>
+        </div>
+        <div class="table-main">
+            <table id="display" class="table">
+            
+                
+            </table>
+        </div>
+    </div>
     </body>
+    <script src="/EmployeePayrollApp_Day45/javascript/home.js"></script>
+</html>
