Added: Employee Payroll App with JSON Object

--- a/html/home.html
+++ b/html/home.html
@@ -27,10 +27,7 @@
             </a>
         </div>
         <div class="table-main">
-            <table id="display" class="table">
-            
-                
-            </table>
+            <table id="display" class="table"></table>
         </div>
     </div>
     </body>
